# python-xdis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  COPYING.txt  ChangeLog  ChangeLog-spell-corrected.diff  LICENSE.mit  MANIFEST.in  Makefile  NEWS  NEWS.md  README.rst  __pkginfo__.py  appveyor.yml  circle.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-master.sh  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.venv.2.7/: pip-selfcheck.json
.venv.3.5/: pip-selfcheck.json
admin-tools/: README.md  check-2.4-2.7-versions.sh  check-3.0-3.2-versions.sh  check-3.1-3.2-versions.sh  check-3.3-3.5-versions.sh  check-3.6-3.10-versions.sh  check-newest-versions.sh  how-to-make-a-release.md  install-all-2.4-2.7.sh  install-all-3.0-3.2.sh  install-all-3.3-3.5.sh  install-all-3.3-3.6.sh  install-all-3.6-3.10.sh  install-all-newest.sh  make-dist-2.4-2.7.sh  make-dist-3.0-3.2.sh  make-dist-3.1-3.2.sh  make-dist-3.3-3.5.sh  make-dist-3.6-3.10.sh  make-dist-newer.sh  make-dist-newest.sh  make-dist-older.sh  merge-for-2.4.sh  merge-for-3.0.sh  merge-for-3.3.sh  merge-for-3.6.sh  pyenv-2.4-2.7-versions  pyenv-3.0-3.2-versions  pyenv-3.1-3.2-versions  pyenv-3.3-3.5-versions  pyenv-3.6-3.10-versions  pyenv-newer-versions  pyenv-newest-versions  pyenv-older-versions  setup-master.sh  setup-python-2.4.sh  setup-python-3.0.sh  setup-python-3.1.sh  setup-python-3.3.sh  setup-python-3.6.sh
doc/: bytecode-history.md  opcode-history.md
maynard-tool/: .gitignore  Makefile  README.md  header.h  main.h  opcode23.h  opcode24.h  opcode25.h  opcode26.h  opcode30.h  opcode31.h  opcode32.h  opcode33.h  se.py  se25.c  se26.c  se27.c  se30.c  se31.c  se32.c  se33.c
maynard-tools/: .gitignore  Makefile  main.h  opcode27.h  readme.md  se26.c  se27.c  se27.py  se31.c  se32.c  se33.c
pytest/: test_bytecode.py  test_codetype.py  test_cross_dis.py  test_disasm.py  test_instructions.py  test_load.py  test_load_file.py  (+5 more)
(+323 files in other folders)
